Add updateType to renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,8 @@
         "fileFilters": [
           "**/**"
         ]
-      }
+      },
+      "updateTypes": ["major", "minor", "patch"]
     },
     {
       "extends": [
